--- a/index.html
+++ b/index.html
@@ -926,6 +926,7 @@ if (!person1DOB || !person2DOB || !isValidISODate(person1DOB) || !isValidISODate
         <b>İLİŞKİ DURUMU:</b> ${iliskiYorumu}
         ${writeHumanCardHTML(insight)}
         <br>
+        <b>Yasam:</b> ${getStatusText(Yasam)} | <b>Edinim:</b> ${getStatusText(Edinim)} | <b>Dogum:</b> ${getStatusText(Dogum)} | <b>Ruh:</b> ${getStatusText(Ruh)} | <b>Gorunur:</b> ${getStatusText(Gorunur)} | <b>Isim:</b> ${getStatusText(Isim)}
       `;
 
       const out = document.getElementById('output');
