--- a/index.html
+++ b/index.html
@@ -266,6 +266,43 @@
   color: var(--gold-500);
 }
 
+.area-details{
+  margin-top: 14px;
+}
+
+.area-summary{
+  list-style: none;
+  cursor: pointer;
+  user-select: none;
+  padding: 10px 12px;
+  border-radius: 12px;
+  border: 1px solid rgba(241,200,76,0.18);
+  background: linear-gradient(180deg, rgba(233,216,255,0.08), rgba(255,255,255,0.04));
+  font-weight: 700;
+  color: var(--gold-500);
+  text-align: center;
+}
+
+.area-summary::-webkit-details-marker{ display:none; }
+
+.area-grid.compact{
+  margin-top: 10px;
+  gap: 8px;
+}
+
+.area-box{
+  padding: 10px;
+}
+
+.area-title{
+  font-size: 12px;
+  margin-bottom: 4px;
+}
+
+.area-status{
+  font-size: 13px;
+}
+
   </style>
 </head>
 
@@ -961,38 +998,18 @@ if (!person1DOB || !person2DOB || !isValidISODate(person1DOB) || !isValidISODate
   <b>İLİŞKİ DURUMU:</b> ${iliskiYorumu}
   ${writeHumanCardHTML(insight)}
   <br><br>
-  <b>Alan Dağılımı:</b><br>
-<div class="area-grid">
-  <div class="area-box">
-    <div class="area-title">Yaşam</div>
-    <div class="area-status">${getStatusText(Yasam)}</div>
-  </div>
+  <details class="area-details">
+  <summary class="area-summary">Alan Dağılımını Gör</summary>
 
-  <div class="area-box">
-    <div class="area-title">Edinim</div>
-    <div class="area-status">${getStatusText(Edinim)}</div>
+  <div class="area-grid compact">
+    <div class="area-box"><div class="area-title">Yaşam</div><div class="area-status">${getStatusText(Yasam)}</div></div>
+    <div class="area-box"><div class="area-title">Edinim</div><div class="area-status">${getStatusText(Edinim)}</div></div>
+    <div class="area-box"><div class="area-title">Doğum</div><div class="area-status">${getStatusText(Dogum)}</div></div>
+    <div class="area-box"><div class="area-title">Ruh</div><div class="area-status">${getStatusText(Ruh)}</div></div>
+    <div class="area-box"><div class="area-title">Görünür</div><div class="area-status">${getStatusText(Gorunur)}</div></div>
+    <div class="area-box"><div class="area-title">İsim</div><div class="area-status">${getStatusText(Isim)}</div></div>
   </div>
-
-  <div class="area-box">
-    <div class="area-title">Doğum</div>
-    <div class="area-status">${getStatusText(Dogum)}</div>
-  </div>
-
-  <div class="area-box">
-    <div class="area-title">Ruh</div>
-    <div class="area-status">${getStatusText(Ruh)}</div>
-  </div>
-
-  <div class="area-box">
-    <div class="area-title">Görünür</div>
-    <div class="area-status">${getStatusText(Gorunur)}</div>
-  </div>
-
-  <div class="area-box">
-    <div class="area-title">İsim</div>
-    <div class="area-status">${getStatusText(Isim)}</div>
-  </div>
-</div>
+</details>
 
       `;
 
