--- a/index.html
+++ b/index.html
@@ -852,8 +852,8 @@ Instagram Hesabına Erişmek için Linke Tıklayın: ` + igLink
     }
 
     function getBandLabel(band){
-      if (band === "mucadele") return "Mücadele";
-      if (band === "degisken") return "Değişken";
+      if (band === "mucadele") return "Denge Arayışı İçinde";
+      if (band === "degisken") return "Emekle Güçlenen";
       if (band === "uyumlu") return "Uyumlu";
       return "Ruh Eşi";
     }
