--- a/index.html
+++ b/index.html
@@ -875,26 +875,26 @@ function buildHumanInsight({ iliskiPuani, Yasam, Edinim, Dogum, Ruh, Gorunur, Is
   let cta = ""; // sadece Değişken + Mücadele
 
   if (band === "ruh_esi") {
-    title = "Doğal akış çok güçlü.";
+    title = "Doğal uyum çok güçlü.";
     p1 = "Birbirinizi kolay anladığınız, hızlı derinleşebilen bir bağ var.";
     p2 = "Bu uyumun sırrı: iletişimi canlı tutmak ve küçük kırgınlıkları büyümeden konuşmak.";
     cta = ""; // zorlamıyoruz
   }
   else if (band === "uyumlu") {
-    title = "Uyum yüksek; ilişki destekleyici.";
+    title = "Destekleyici ve Yüksek Uyum";
     p1 = "Genel enerji tatmin edici ve birlikte büyümeye açık.";
     p2 = "Zor zamanlarda bile ortak payda bulma ihtimaliniz yüksek.";
     cta = ""; // zorlamıyoruz
   }
   else if (band === "degisken") {
-    title = "Uyum potansiyeli var; emekle daha güzel akar.";
+    title = "Uyum potansiyeli var";
     p1 = "Bu eşleşme kendiliğinden stabil kalmayabilir; dönem dönem iniş-çıkış hissi verebilir.";
     p2 = "Netlik ve uzlaşma dili kurulduğunda ilişkinin ritmi ciddi rahatlar.";
     cta =
       "<b>Detaylı analizde</b> hangi başlıkta neden zorlandığınızı netleştirip daha rahat bir yol haritası çıkarabiliriz.";
   }
   else { // mucadele
-    title = "Enerjiler farklı çalışıyor; bilinçli denge ister.";
+    title = "Farklı frekanslar; bilinçli denge ister";
     p1 = "Bu sonuç 'kesin olmaz' demek değildir; sadece doğal akışın düşük olduğunu gösterir.";
     p2 = "Doğru yönetilmezse yıpratabilir; doğru yönetilirse öğretici ve olgunlaştırıcı bir bağa dönüşebilir.";
     cta =
